@@ -42,33 +42,45 @@ struct ofp_bundle_entry {
     };
 
     /* OpenFlow header and some of the message contents for error reporting. */
-    struct ofp_header ofp_msg[DIV_ROUND_UP(64, sizeof(struct ofp_header))];
+    union {
+        struct ofp_header ofp_msg;
+        uint8_t ofp_msg_data[64];
+    };
 };
 
-enum bundle_state {
+enum OVS_PACKED_ENUM bundle_state {
     BS_OPEN,
     BS_CLOSED
 };
 
 struct ofp_bundle {
     struct hmap_node  node;      /* In struct ofconn's "bundles" hmap. */
+    long long int     used;      /* Last time bundle was used. */
     uint32_t          id;
     uint16_t          flags;
     enum bundle_state state;
 
     /* List of 'struct bundle_message's */
     struct ovs_list   msg_list;
+
+    /* OpenFlow header and some of the message contents for error reporting. */
+    union {
+        struct ofp_header ofp_msg;
+        uint8_t ofp_msg_data[64];
+    };
 };
 
 static inline struct ofp_bundle_entry *ofp_bundle_entry_alloc(
     enum ofptype type, const struct ofp_header *oh);
 static inline void ofp_bundle_entry_free(struct ofp_bundle_entry *);
 
-enum ofperr ofp_bundle_open(struct ofconn *, uint32_t id, uint16_t flags);
+enum ofperr ofp_bundle_open(struct ofconn *, uint32_t id, uint16_t flags,
+                            const struct ofp_header *);
 enum ofperr ofp_bundle_close(struct ofconn *, uint32_t id, uint16_t flags);
 enum ofperr ofp_bundle_discard(struct ofconn *, uint32_t id);
 enum ofperr ofp_bundle_add_message(struct ofconn *, uint32_t id,
-                                   uint16_t flags, struct ofp_bundle_entry *);
+                                   uint16_t flags, struct ofp_bundle_entry *,
+                                   const struct ofp_header *);
 
 void ofp_bundle_remove__(struct ofconn *, struct ofp_bundle *, bool success);
 
@@ -80,7 +92,8 @@ ofp_bundle_entry_alloc(enum ofptype type, const struct ofp_header *oh)
     entry->type = type;
 
     /* Max 64 bytes for error reporting. */
-    memcpy(entry->ofp_msg, oh, MIN(ntohs(oh->length), sizeof entry->ofp_msg));
+    memcpy(entry->ofp_msg_data, oh,
+           MIN(ntohs(oh->length), sizeof entry->ofp_msg_data));
 
     return entry;
 }
