@@ -1,3 +1,6 @@
+
+---------------------
+
 v2.6.0 - xx xxx xxxx
 ---------------------
    - First supported release of OVN.  See ovn-architecture(7) for more
@@ -6,6 +9,8 @@ v2.6.0 - xx xxx xxxx
      * New "monitor_cond" "monitor_cond_update" and "update2" extensions to
        RFC 7047.
    - OpenFlow:
+     * OpenFlow 1.3+ bundles now expire after 10 seconds since the
+       last time the bundle was either opened, modified, or closed.
      * OpenFlow 1.3 Extension 230, adding OpenFlow Bundles support, is
        now implemented.
      * OpenFlow 1.3+ bundles are now supported for group mods as well as
